[tool.poetry]
name = "coursework2"
version = "0.1.0"
description = ""
authors = ["Ekaterina Pavlova <miss.kat.katerina2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.1.0"
black = "^24.4.2"
mypy = "^1.10.1"
isort = "^5.13.2"
pandas = "^2.2.2"
xlrd = "^2.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py

)
'''

[tool.isort]
line_length = 119